--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huddle</title>
 
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="./img/favicon-32x32.png">
+
+    <!-- fonts -->
+    <!-- font-family: 'Open Sans', sans-serif; -->
+    <!-- font-family: 'Poppins', sans-serif; -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./scss/main.scss">
 </head>
 <body>
