feat: add component nav-bar and button
The button component is not fully realized with btn--big, btn--primary and btn--squared modifiers not supported.

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="./scss/main.scss">
 </head>
 <body>
-    Hello World!!
+    <header class="nav-bar">
+        <img class="nav-bar__logo" src="./img/logo.svg" alt="huddle icon">
+        <a class="btn btn--secondary btn--small" href="#">Try It Free</a>
+    </header>
 </body>
 </html>
