--- a/src/index.html
+++ b/src/index.html
@@ -23,5 +23,13 @@
         <img class="nav-bar__logo" src="./img/logo.svg" alt="huddle icon">
         <a class="btn btn--secondary btn--small" href="#">Try It Free</a>
     </header>
+    <main>
+        <section class="hero-section">
+            <h1  class="hero-section__heading-primary heading-primary">Build The Community Your Fans Will Love</h1>
+            <p   class="hero-section__body-text body-text">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+            <a   class="hero-section__button btn btn--primary" href="#">Get Started For Free</a>
+            <img class="hero-section__image" src="./img/screen-mockups.svg" alt="screen mockups image">
+        </section>
+    </main>
 </body>
 </html>
