feat: add component stats-box

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,22 @@
             <p   class="hero-section__body-text body-text">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
             <a   class="hero-section__button btn btn--primary" href="#">Get Started For Free</a>
             <img class="hero-section__image" src="./img/screen-mockups.svg" alt="screen mockups image">
+            <div class="stats-box">
+                <div class="stats-box__stat">
+                    <div class="stats-box__stat-wrapper">
+                        <img class="stats-box__image" src="./img/icon-communities.svg" alt="icon community">
+                        <h2  class="stats-box__heading-primary heading-primary">1.4k+</h2>
+                        <h3  class="stats-box__heading-secondary heading-secondary">communities formed</h3>
+                    </div>
+                </div>
+                <div class="stats-box__stat">
+                    <div class="stats-box__stat-wrapper">
+                        <img class="stats-box__image" src="./img/icon-messages.svg" alt="icon community">
+                        <h2  class="stats-box__heading-primary heading-primary">2.7m+</h2>
+                        <h3  class="stats-box__heading-secondary heading-secondary">messages sent</h3>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
