feat: add new section which is also component "exposition-section"

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,28 @@
                 </div>
             </div>
         </section>
+
+        <section class="exposition-section">
+            <picture class="exposition-section__picture">
+                <source media="(min-width:600px)" srcset="./img/bg-section-top-desktop-1.svg">
+                <source srcset="./img/bg-section-top-mobile-1.svg">
+                <img class="exposition-section__image" src="./img/bg-section-top-mobile-1.svg" alt="section top curve">
+            </picture>
+            <div class="exposition-section__card-wrapper">
+                <div class="exposition-section__card">
+                    <div class="exposition-section__text-box">
+                        <h1 class="exposition-section__heading-primary heading-primary">Grow Together</h1>
+                        <p class="exposition-section__body-text body-text">Generate meaningful discussions with your audience and build a strong, loyal community.Think of the insightful conversations you miss out on with a feedback form.</p>
+                    </div>
+                    <img class="exposition-section__image-main" src="./img/illustration-grow-together.svg" alt="illustration growing togeteher">
+                </div>
+            </div>
+            <picture class="exposition-section__picture">
+                <source media="(min-width:600px)" srcset="./img/bg-section-bottom-desktop-1.svg">
+                <source srcset="./img/bg-section-bottom-mobile-1.svg">
+                <img class="exposition-section__image" src="./img/bg-section-bottom-mobile-1.svg" alt="section bottom curve">
+            </picture>
+        </section>
     </main>
 </body>
 </html>
