--- a/src/index.html
+++ b/src/index.html
@@ -59,13 +59,47 @@
                         <h1 class="exposition-section__heading-primary heading-primary">Grow Together</h1>
                         <p class="exposition-section__body-text body-text">Generate meaningful discussions with your audience and build a strong, loyal community.Think of the insightful conversations you miss out on with a feedback form.</p>
                     </div>
-                    <img class="exposition-section__image-main" src="./img/illustration-grow-together.svg" alt="illustration growing togeteher">
+                    <img class="exposition-section__image-main" src="./img/illustration-grow-together.svg" alt="growing together illustration">
                 </div>
             </div>
             <picture class="exposition-section__picture">
                 <source media="(min-width:600px)" srcset="./img/bg-section-bottom-desktop-1.svg">
                 <source srcset="./img/bg-section-bottom-mobile-1.svg">
                 <img class="exposition-section__image" src="./img/bg-section-bottom-mobile-1.svg" alt="section bottom curve">
+            </picture>
+        </section>
+
+        <section class="exposition-section">
+            <div class="exposition-section__card-wrapper exposition-section__card-wrapper--no-bg">
+                <div class="exposition-section__card exposition-section__card--order-no-change exposition-section__card--no-y-padding-tablet">
+                    <div class="exposition-section__text-box">
+                        <h1 class="exposition-section__heading-primary heading-primary">Flowing Conversations</h1>
+                        <p class="exposition-section__body-text body-text">You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+                    </div>
+                    <img class="exposition-section__image-main" src="./img/illustration-flowing-conversation.svg" alt="flowing conversation illustration">
+                </div>
+            </div>
+        </section>
+
+        <section class="exposition-section">
+            <picture class="exposition-section__picture">
+                <source media="(min-width:600px)" srcset="./img/bg-section-top-desktop-2.svg">
+                <source srcset="./img/bg-section-top-mobile-2.svg">
+                <img class="exposition-section__image" src="./img/bg-section-top-mobile-2.svg" alt="section top curve">
+            </picture>
+            <div class="exposition-section__card-wrapper">
+                <div class="exposition-section__card">
+                    <div class="exposition-section__text-box">
+                        <h1 class="exposition-section__heading-primary heading-primary">Your Users</h1>
+                        <p class="exposition-section__body-text body-text">It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+                    </div>
+                    <img class="exposition-section__image-main" src="./img/illustration-your-users.svg" alt="your users illustration">
+                </div>
+            </div>
+            <picture class="exposition-section__picture">
+                <source media="(min-width:600px)" srcset="./img/bg-section-bottom-desktop-2.svg">
+                <source srcset="./img/bg-section-bottom-mobile-2.svg">
+                <img class="exposition-section__image" src="./img/bg-section-bottom-mobile-2.svg" alt="section bottom curve">
             </picture>
         </section>
     </main>
