feat: added the call to action section

--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,11 @@
                 <img class="exposition-section__image" src="./img/bg-section-bottom-mobile-2.svg" alt="section bottom curve">
             </picture>
         </section>
+
+        <section class="call-to-action-section">
+            <h1  class="heading-primary">Ready To Build Your Community?</h1>
+            <a   class="btn btn--primary" href="#">Get Started For Free</a>
+        </section>
     </main>
 </body>
 </html>
