feat: footer markup done

--- a/src/index.html
+++ b/src/index.html
@@ -108,5 +108,43 @@
             <a   class="btn btn--primary" href="#">Get Started For Free</a>
         </section>
     </main>
+
+    <footer>
+        <picture class="footer__picture">
+            <source media="(min-width:600px)" srcset="./img/bg-footer-top-desktop.svg">
+            <source srcset="./img/bg-footer-top-mobile.svg">
+            <img class="footer__image" src="./img/bg-footer-top-mobile.svg" alt="footer top curve">
+        </picture>
+        <div class="footer__wrapper">
+            <div class="footer__card">
+                
+                <div class="footer__newsletter">
+                    <h2 class="footer__heading-secondary">Newsletter</h2>
+                    <p class="footer__body-text body-text">To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
+                    <input class="footer__input" type="text">
+                </div>
+                
+                <div class="footer-information">
+                    <img class="footer__logo" src="./img/logo.svg" alt="huddle logo">
+                    <p class="footer__body-text body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.</p>
+                    <div class="footer__contact-box">
+                        <div class="footer__contact-entry">
+                            <img class="footer__icon-img" src="./img/icon-phone.svg" alt="phone icon">
+                            <p class="footer__body-text body-text">Phone: +1-543-123-4567</p>
+                        </div>
+                        <div class="footer__contact-entry">
+                            <img class="footer__icon-img" src="./img/icon-email.svg" alt="email icon">
+                            <p class="footer__body-text body-text">example@huddle.com</p>
+                        </div>
+                    </div>
+                    <div class="footer__icon-box">
+                        <img class="footer__icon" src="./img/facebook-icon.svg"  alt="facebook icon">
+                        <img class="footer__icon" src="./img/instagarm-icon.svg" alt="instagarm icon">
+                        <img class="footer__icon" src="./img/twitter-icon.svg"   alt="twitter icon">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
